--- a/VBS/templates/add.html
+++ b/VBS/templates/add.html
@@ -17,5 +17,7 @@
       
       <button type="submit">Add Book</button>
     </form>
+
+    <a href="{{url_for('home')}}" class="">Home</a>
   </body>
 </html>
